# osmi-water

./: .gitignore  CMakeLists.txt  README.md
cmake/: FindOsmiumGeosFactory.cmake
map/: water.map
src/: CMakeLists.txt  Makefile  areahandler.hpp  datastorage.hpp  errorsum.hpp  falsepositives.hpp  osmium_errorsum.hpp  osmium_waterdatastorage.hpp  osmium_waterinspector.cpp  osmium_waterpolygon.hpp  osmium_waterway.hpp  tagcheck.hpp  timer.h  waterinspector.cpp  waterpolygon.hpp  waterway.hpp
